# companions

./: .gitignore  LICENSE  README.md
languages/python/2020-effective-python/: 10_collaboration.ipynb  1_pyhtonic_thinking.ipynb  2_lists_and_dictionaries.ipynb  3_functions.ipynb  4_comprehensios_generators.ipynb  5_classes_and_interfaces.ipynb  (+5 more)
machine-learning/2019-data-science-with-python-and-dask/: ch2.ipynb  ch3.ipynb  ch4.ipynb  ch5.ipynb  ch9.ipynb  main.md  requirements.txt
machine-learning/2019-handson-machine-learning-with-scikit-learn-keras-and-tensorFlow/: .gitignore  10_introduction_artificial_neural_networks_with_keras.ipynb  1_the_machine_learning_landscape.ipynb  2_end_to_end_machine_learning_project.ipynb  3_classification.ipynb  4_training_models.ipynb  5_support_vector_machines.ipynb  6_decision_trees.ipynb  7_ensemble_methods.ipynb  apt.txt  environment.yml  mö_kontrol.md  readme.md  requirements.txt  utilities.py
machine-learning/2020-approaching-almost-any-machine-learning-problem/: .gitignore  10_approaching_image_classification_and_segmentation.ipynb  11-approaching-text-classification-regression-1.ipynb  11-approaching-text-classification-regression-2.ipynb  12_approaching_ensembling_and_stacking.ipynb  2_supervised_vs_unsupervised.ipynb  3_model_validation.ipynb  4_evaluation_metrics.ipynb  5_aranging_machine_learning_projects.ipynb  6_approaching_categorical_variables_i.ipynb  6_approaching_categorical_variables_ii.ipynb  7_Feature_Engineering.ipynb  8_feature_selection.ipynb  9_hyperparameter_optimization.ipynb  Makefile  README.md  convert_post.sh  requirements.txt  utilities.py
machine-learning/2022-machine-learning-with-pytorch-scikitlearn/: ch1.ipynb  ch10.ipynb  ch11.ipynb  ch14.ipynb  ch18.ipynb  ch2.ipynb  ch3.ipynb  ch4.ipynb  ch8.ipynb
machine-learning/2022-natural-language-processing-with-transformers/: Makefile  README.md  bib.tex  ch1.ipynb  ch2.ipynb  ch3.ipynb  dev.ipynb  pyproject.toml
tools/mlflow/: notes.md
tools/prometheus/: prometheus.md
tools/spark/: Makefile  README.md  pyproject.toml
tools/spark/books/2020-learning-spark-lightning-fast-data-analytics/: ch1.ipynb  ch10.ipynb  ch2.ipynb  ch3.ipynb  ch4.ipynb  ch5.ipynb  ch7.ipynb
(+30 files in other folders)
