[project]
name = "2022-natural-language-processing-with-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]

[dependency-groups]
dev = [
    "jupytext>=1.16.6",
    "nb-clean>=4.0.1",
    "ruff>=0.9.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"