[project]
name = "2022-natural-language-processing-with-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "bertviz>=1.4.0",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "jupytext>=1.16.6",
    "nb-clean>=4.0.1",
    "ruff>=0.9.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=4.1.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.uv]
constraint-dependencies = ["llvm>0.43.0", "numba>0.53.1"]
