[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Onur Tunali", email = "or.tunali@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "nb-clean>=4.0.1",
    "pyspark[ml,mlib,sql]>=3.5.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
